--- a/ia/css/style.css
+++ b/ia/css/style.css
@@ -34,7 +34,7 @@ header {
     top: 0;
     width: 100%;
     height: 100vh;
-    background-color: #FFFFFF;
+    background-color: var(--background-color);
     transition: 3s;
 }
 
