--- a/ia/css/leaderboard-wide.css
+++ b/ia/css/leaderboard-wide.css
@@ -138,3 +138,17 @@
 .list .item:hover {
   transform: scale(1.05);
 }
+
+.highlight-item {
+  background-color: gold !important;
+}
+
+.highlight-score {
+  font-style: italic !important;
+  color: darkgreen !important;
+}
+
+.highlight-name {
+  font-style: italic !important;
+  color: darkgreen !important;
+}
