--- a/ia/css/leaderboard-wide.css
+++ b/ia/css/leaderboard-wide.css
@@ -1,12 +1,20 @@
+  #leaderboard-bottom-console {
+    justify-content: center;
+    gap: 6rem;
+  }
+
 .center {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .top3 {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 }
 
   .top3 .item {
@@ -17,7 +25,7 @@
     height: 10rem;
     text-align: center;
     padding: 2.8rem 0 0;
-    margin: 1rem 1rem 2rem;
+    margin: 1rem 4rem 1rem 1rem;
     border-radius: 0.5rem;
     transform-origin: bottom;
     cursor: pointer;
@@ -57,14 +65,23 @@
 
   .top3 .item .score:after {
     display: block;
-    content: 'points';
+    content: ' points';
     opacity: 1;
   }
 
   .top3 .item.one {
+    order: 1;
     width: 10rem;
     height: 11rem;
     padding-top: 3.5rem;
+  }
+
+  .top3 .item.two {
+    order: 2;
+  }
+
+  .top3 .item.three {
+    order: 3;
   }
 
   .top3 .item.one .pic {
@@ -89,8 +106,9 @@
     align-items: center;
     background: var(--leaderboard-color);
     height: 3rem;
+    width: 36rem;
     border-radius: 0.5rem;
-    margin-bottom: 2rem;
+    margin: 2rem 0;
     transform-origin: left;
     cursor: pointer;
     transition: transform 200ms ease-in-out;
@@ -131,7 +149,7 @@
 
 .list .item .score:after {
   margin-right: 1rem;
-  content: 'points';
+  content: ' points';
   opacity: 1;
 }
 
@@ -139,16 +157,16 @@
   transform: scale(1.05);
 }
 
-.highlight-item {
-  background-color: gold !important;
+.item.highlight-item {
+  background-color: gold;
 }
 
-.highlight-score {
-  font-style: italic !important;
-  color: darkgreen !important;
+.item.highlight-score {
+  font-style: italic;
+  color: darkgreen;
 }
 
-.highlight-name {
-  font-style: italic !important;
-  color: darkgreen !important;
+.item.highlight-name {
+  font-style: italic;
+  color: darkgreen;
 }
