Work on game logic

--- a/ia/css/style.css
+++ b/ia/css/style.css
@@ -92,3 +92,10 @@ header {
         opacity: 0;
         transition: ease-out 300ms;
     }
+
+
+.twitter-share-button {
+    display: block;
+    margin: auto;
+    margin-bottom: 2px;
+}
